create k8sservice api, pass unit test and api test
